--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,12 +10,12 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: 'src/NugetAuditor/NugetAuditor.2017.sln'
+  solution: 'src/NugetAuditor.2019/NugetAuditor.2019.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   patch: $[counter('VersionCounter', 0)]
 
-name: 3.1.0.$(patch) # Set the value of $(Build.BuildNumber)
+name: 3.4.1.$(patch) # Set the value of $(Build.BuildNumber)
 
 steps:
 - task: PowerShell@2
@@ -55,3 +55,10 @@ steps:
   inputs:
     artifactName: 'debugdrop'
     targetPath: '$(Build.ArtifactStagingDirectory)'
+
+- task: Bash@3
+  inputs:
+    targetType: 'filePath'
+    filePath: '$(Build.SourcesDirectory)/scripts/s3-upload-aws4.sh'
+    workingDirectory: '$(Build.SourcesDirectory)/src/NugetAuditor.2019/NugetAuditor.VSIX.2019/bin/Release/'
+    arguments: 'NugetAuditor.VSIX.vsix'
